--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -142,6 +142,7 @@
     {% section 'announcement-bar' %}
     {% section 'header' %}
     {{ template }}
+    {{ 'hello' }}
 
     <main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1">
       {{ content_for_layout }}
