--- a/sections/testimonial.liquid
+++ b/sections/testimonial.liquid
@@ -1,5 +1,6 @@
 <section class="testimonial" id="testimonial">
     <h1 class="testimonial__title">{{ section.settings.testimonial_title }}</h1>
+    <span>This is a test</span>
     <div class="container page-width">
         <div class="testimonial__cards">
 
