--- a/sections/testimonial.liquid
+++ b/sections/testimonial.liquid
@@ -1,5 +1,5 @@
 <section class="testimonial" id="testimonial">
-    <h1 class="testimonial__title">{{ section.settings.testimonial_title }} hello</h1>
+    <h1 class="testimonial__title">{{ section.settings.testimonial_title }} helloworld</h1>
     <div class="container page-width">
         <div class="testimonial__cards">
 
